package edu.hitsz.observer;

public interface Observer {
    public void beBombed();
    public void beIced();
}
